lab 3 code modified to find the polarization for arbitrary jones vector

--- a/lab_code/lab_3.ipynb
+++ b/lab_code/lab_3.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,12 +18,12 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.optimize import *\n",
     "import scipy\n",
-    "from qutip import *"
+    "from qutip import *\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,6 +84,25 @@
     "    av = np.exp(1j*b)*(np.cos(a))\n",
     "    av_out = S*ah - C*av\n",
     "    return mag*np.absolute(av_out)**2 + 0.2*np.sin(offset)\n",
+    "\n",
+    "def calculate_ellipsicity(input_jones_vector):\n",
+    "    ah = np.abs(input_jones_vector[0])\n",
+    "    av = np.abs(input_jones_vector[1])\n",
+    "    if av:\n",
+    "        z = (ah/av)*((input_jones_vector[1]/input_jones_vector[0]))\n",
+    "        delta = (-1*np.arctan(np.imag(z)/np.real(z)) if np.real(z) != 0 else np.pi/2)\n",
+    "    else:\n",
+    "        delta = 0\n",
+    "\n",
+    "    def equation(p):\n",
+    "        x,y = p\n",
+    "        eq1 = ((x**2 - 1)/(x**2 + 1))*np.cos(2*y) + ah**2 - av**2\n",
+    "        eq2 = ((x**2 - 1)/(np.sqrt(1 + x**4 + (x**2)*(np.tan(y)**2 + np.tan(y)**(-2)) ))) - np.cos(delta)\n",
+    "        return (eq1,eq2)\n",
+    "\n",
+    "    r, phi = fsolve(equation, (1,0))\n",
+    "    \n",
+    "    return r, phi\n",
     "\n",
     "\n",
     "'''\n",
@@ -186,6 +205,38 @@
     "        print(\"measurement list is not in correct format\")\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1.0, 1.3707963267948966)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/amanmehta/tools/anaconda3/lib/python3.9/site-packages/scipy/optimize/minpack.py:175: RuntimeWarning: The iteration is not making good progress, as measured by the \n",
+      "  improvement from the last ten iterations.\n",
+      "  warnings.warn(msg, RuntimeWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "''' \n",
+    "TEST\n",
+    "'''\n",
+    "\n",
+    "input_jones = [np.sqrt(1/2)*1,np.sqrt(1/2)*1j]\n",
+    "\n",
+    "print(calculate_ellipsicity(input_jones))"
    ]
   },
   {
@@ -694,51 +745,6 @@
     "ax.set_ylabel(\"Voltage (V)\")\n",
     "ax.legend()\n",
     "ax.set_title(\"Optical Isolator\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "$0^o$ & $0.02\\pm 0.1 $ \\\\ \n",
-      "$10^o$ & $0.6033\\pm 0.1 $ \\\\ \n",
-      "$20^o$ & $1.8644\\pm 0.1 $ \\\\ \n",
-      "$30^o$ & $3.2408\\pm 0.1 $ \\\\ \n",
-      "$40^o$ & $3.9829\\pm 0.1 $ \\\\ \n",
-      "$45^o$ & $4.0398\\pm 0.1 $ \\\\ \n",
-      "$50^o$ & $3.8802\\pm 0.1 $ \\\\ \n",
-      "$60^o$ & $2.9083\\pm 0.1 $ \\\\ \n",
-      "$70^o$ & $1.5469\\pm 0.1 $ \\\\ \n",
-      "$80^o$ & $0.3682\\pm 0.1 $ \\\\ \n",
-      "$90^o$ & $0.0243\\pm 0.1 $ \\\\ \n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "''' \n",
-    "TEMP\n",
-    "'''\n",
-    "\n",
-    "fs_6 = [0.02, 0.6033, 1.8644, 3.2408, 3.9829, 4.0398, 3.8802, 2.9083, 1.5469, 0.3682, 0.0243]\n",
-    "angle_abs_6 = [0, 10, 20, 30, 40, 45, 50, 60, 70, 80, 90]\n",
-    "\n",
-    "\n",
-    "angle_rel_hwp = [0, 10, 20, 30, 40, 50, 60, 70, 80]\n",
-    "\n",
-    "fs1_qwp = [3.82, 3.4, 2.76, 2.14, 1.83, 2.05, 2.59, 3.28,3.69, 3.70, 3.35]\n",
-    "fs2_qwp = [0.018, 0.5, 1.24, 1.93, 2.24, 1.99, 1.36, 0.635, 0.88, 0.16, 0.37]\n",
-    "\n",
-    "\n",
-    "out_string = ''\n",
-    "for _fs1, _aa in zip(fs_6, angle_abs_5):\n",
-    "    out_string = out_string + \"$\" + str(_aa) + \"^o$\" + \" & \"   + \"$\" + str(_fs1) + \"\\pm 0.1 $\" + \" \\\\\\ \\n\"\n",
-    "print(out_string)"
    ]
   },
   {
