--- a/lab_code/lab_3.ipynb
+++ b/lab_code/lab_3.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,12 +18,12 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.optimize import *\n",
     "import scipy\n",
-    "from qutip import *"
+    "from qutip import *\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,6 +85,25 @@
     "    av_out = S*ah - C*av\n",
     "    return mag*np.absolute(av_out)**2 + 0.2*np.sin(offset)\n",
     "\n",
+    "\n",
+    "def calculate_ellipsicity(input_jones_vector):\n",
+    "    ah = np.abs(input_jones_vector[0])\n",
+    "    av = np.abs(input_jones_vector[1])\n",
+    "    if av:\n",
+    "        z = (ah/av)*((input_jones_vector[1]/input_jones_vector[0]))\n",
+    "        delta = (-1*np.arctan(np.imag(z)/np.real(z)) if np.real(z) != 0 else np.pi/2)\n",
+    "    else:\n",
+    "        delta = 0\n",
+    "\n",
+    "    def equation(p):\n",
+    "        x,y = p\n",
+    "        eq1 = ((x**2 - 1)/(x**2 + 1))*np.cos(2*y) + ah**2 - av**2\n",
+    "        eq2 = ((x**2 - 1)/(np.sqrt(1 + x**4 + (x**2)*(np.tan(y)**2 + np.tan(y)**(-2)) ))) - np.cos(delta)\n",
+    "        return (eq1,eq2)\n",
+    "\n",
+    "    r, phi = fsolve(equation, (1,0))\n",
+    "    \n",
+    "    return r, phi\n",
     "\n",
     "'''\n",
     "(a) 1- photon density matrix\n",
@@ -186,6 +205,38 @@
     "        print(\"measurement list is not in correct format\")\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1.0, 1.3707963267948966)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/amanmehta/tools/anaconda3/lib/python3.9/site-packages/scipy/optimize/minpack.py:175: RuntimeWarning: The iteration is not making good progress, as measured by the \n",
+      "  improvement from the last ten iterations.\n",
+      "  warnings.warn(msg, RuntimeWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "''' \n",
+    "TEST\n",
+    "'''\n",
+    "\n",
+    "input_jones = [np.sqrt(1/2)*1,np.sqrt(1/2)*1j]\n",
+    "\n",
+    "print(calculate_ellipsicity(input_jones))"
    ]
   },
   {
@@ -1164,9 +1215,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Oct 13 2022, 21:15:33) \n[GCC 11.2.0]"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "358a77507ec11ddb660ac1d8d3eb0035d960f272c3eb24b4f5810b389e19700a"
